--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -3,75 +3,174 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>An easy way to display forms with Zend Framework + Bootstrap</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <title>ಕರ್ನಾಟಕ ರಾಜ್ಯ ವಾಣಿಜ್ಯ ವಾಹನ ಚಾಲಕರ ಅಪಘಾತ ಪರಿಹಾರ ವಿಮಾ ಯೋಜನೆ</title>
+    <!-- Le styles -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <style>
+      
+      body {
+        padding-top: 190px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+
+      .navcolorchange { 
+      background-color: red; /* fallback color, place your own */
+      }
+   
+    </style>
+
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    
+    <style>
+
+      .navcolorchange { 
+      background-color: #08C;
+      } 
+
+      .newfontcolor{
+        color: #000;
+      }
+
+      .blackfont{
+        color: #000;
+      }
+
+      .popupnewwidth{
+      /*  width:880px;*/
+      /*  margin-right: auto;
+        margin-left: auto;
+      width:940px;left:36%;
+        */
+        
+      }
+    </style>
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="/assets/bootstrap.css" rel="stylesheet">
 
-		<style type="text/css">
-html, body {
-        background-color: #eee;
-      }
-      body {
-        padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
-      }
-      .container > footer p {
-        text-align: center; /* center align it with the container */
-      }
-      .container {
-        width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
-      }
-
-      /* The white background content wrapper */
-      .content {
-        background-color: #fff;
-        padding: 20px;
-        margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-        -webkit-border-radius: 0 0 6px 6px;
-           -moz-border-radius: 0 0 6px 6px;
-                border-radius: 0 0 6px 6px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-                box-shadow: 0 1px 2px rgba(0,0,0,.15);
-      }
-
-      /* Page header tweaks */
-      .page-header {
-        background-color: #f5f5f5;
-        padding: 20px 20px 10px;
-        margin: -20px -20px 20px;
-      }
-		</style>
-  </head>
+   </head>
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
+    <div class="navbar navbar-fixed-top " style="background:white">
+     
         <div class="container">
-          <a class="brand" href="#">Bootstrap Zend Framework</a>
+          
+          <h2 style="text-align:center;color:#08C">ಕರ್ನಾಟಕ ರಾಜ್ಯ ವಾಣಿಜ್ಯ ವಾಹನ ಚಾಲಕರ ಅಪಘಾತ ಪರಿಹಾರ ವಿಮಾ ಯೋಜನೆ</h2> 
+          
+      
+          <img src="assets/img/banner.jpg" style="width:120%;height:10em;padding-bottom:05px;" alt="banner" class="banner"/>
+
         </div>
+  
+      
+        <div class="container navcolorchange ">
+
+         
+          <div class="nav-collapse">
+            
+          </div><!--/.nav-collapse -->
+    
       </div>
     </div>
+ 
+  
+
 
     <div class="container">
-      <div class="content">
-        <div class="page-header">
-          <h1>An easy way to display forms with Zend Framework + Bootstrap</h1>
-        </div>
 
-				<?php echo $this->form; ?>
+
+     <div class="row-fluid">
+        
+        <div class="span7">
+          <div class="hero-unit">
+           <!--  <img width="550px" height="270px" src="watermark.jpg"></img> -->
+
+           <div id="myCarousel" class="carousel slide">
+                <!-- Carousel items -->
+                <div class="carousel-inner">
+
+                  <div class="active item"><img width="550px" height="270px" src="assets/img/auto.jpg"></img> </div>
+                  <div  class="item"><img width="550px" height="270px" src="assets/img/lorry.jpg"></img> </div>
+                  <div class="item"><img width="550px" height="270px" src="assets/img/lorry2.png"></img> </div>
+                  
+                </div>
+                <!-- Carousel nav -->
+                <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+                <a id="startCarousel" class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+          </div>
+
+
+          </div>
+          <div class="row-fluid">
+            
+          </div><!--/row-->
+        </div><!--/span-->
+
+        <div class="span5">
+          <div class="well sidebar-nav" style="height:370px">
+
+  <fieldset>
+    <legend>Login Here</legend>
+
+    <br/><br/>
+
+  <?php echo $this->loginForm; ?>
+  <?php if($this->errorMessage != '') { ?>
+  <div class="control-group ">
+  <div class="alert alert-block alert-error fade in  alertbox">
+            <button type="button" class="close" >×</button>
+            <h4 class="alert-heading">Oh snap! You got an error!</h4>
+            <p><?php echo $this->errorMessage; ?> </p>
+            
+  </div>
+  </div>
+  <?php } ?>
+
+
+  </fieldset>
+
+          </div><!--/.well -->
+        </div><!--/span-->
       </div>
 
+
+
       <footer>
+       <p class="copyright">Copyright &copy; 2012 <a href="http://www.myshoreitsolutions.com">MyShore IT Solutions</a>, All Rights Reserved.</p>
       </footer>
 
-    </div> <!-- /container -->
+    </div>  <!-- /container -->
+
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster     <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap-transition.js"></script>
+    
+    <script src="assets/js/bootstrap-modal.js"></script>
+    <script src="assets/js/bootstrap-dropdown.js"></script>
+    <script src="assets/js/bootstrap-scrollspy.js"></script>
+    <script src="assets/js/bootstrap-tab.js"></script>
+    <script src="assets/js/bootstrap-tooltip.js"></script>
+    <script src="assets/js/bootstrap-popover.js"></script>
+    <script src="assets/js/bootstrap-button.js"></script>
+    <script src="assets/js/bootstrap-collapse.js"></script>
+    <script src="assets/js/bootstrap-typeahead.js"></script>
+    -->
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap-transition.js"></script>
+    <script src="assets/js/bootstrap-carousel.js"></script>
+    <script src="assets/js/bootstrap-alert.js"></script>
+    <script src="assets/js/custom.js"></script>
+ 
+
 
   </body>
 </html>
