--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -91,9 +91,9 @@
           <div class="hero-unit">
            <!--  <img width="550px" height="270px" src="watermark.jpg"></img> -->
 
-           <div id="myCarousel" class="carousel slide">
+           <div id="myCarousel" class="carousel slide" >
                 <!-- Carousel items -->
-                <div class="carousel-inner">
+                <div class="carousel-inner" style="height:270px">
 
                   <div class="active item"><img width="550px" height="270px" src="assets/img/auto.jpg"></img> </div>
                   <div  class="item"><img width="550px" height="270px" src="assets/img/lorry.jpg"></img> </div>
